--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -12,7 +12,6 @@
         android:orientation="vertical">
         <ScrollView
             android:id="@+id/chat_frame_scroll"
-            android:padding="16dp"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -23,6 +22,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <LinearLayout
+                    android:paddingHorizontal="16dp"
+                    android:clipToPadding="true"
                     android:id="@+id/chat_frame"
                     android:layout_alignParentBottom="true"
                     android:layout_width="match_parent"
@@ -34,7 +35,15 @@
             android:padding="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
+            <Button
+                android:layout_weight="1"
+                android:layout_gravity="end"
+                android:id="@+id/btn_receive"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/receive"
+                android:layout_marginEnd="16dp"/>
             <Button
                 android:layout_gravity="end"
                 android:id="@+id/btn_send"
