--- a/app/src/main/res/layout/asset_chatbox_alt.xml
+++ b/app/src/main/res/layout/asset_chatbox_alt.xml
@@ -6,6 +6,14 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <TextView
+        android:paddingVertical="8dp"
+        android:id="@+id/message_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceSmall"
+        android:textColor="?attr/colorError"/>
+
     <androidx.cardview.widget.CardView
         app:cardElevation="0dp"
         android:orientation="vertical"
@@ -32,13 +40,5 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:padding="8dp"
-        android:id="@+id/message_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:textAppearanceSmall"
-        android:textColor="?attr/colorError"/>
 
 </LinearLayout>
