--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChatFragment"
-    android:fitsSystemWindows="true">
+    android:id="@+id/chat_frame_main">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
