--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -32,7 +32,7 @@
             </RelativeLayout>
         </ScrollView>
         <LinearLayout
-            android:padding="16dp"
+            android:padding="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -43,7 +43,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/receive"
-                android:layout_marginEnd="16dp"/>
+                android:layout_marginEnd="8dp"
+                android:backgroundTint="?attr/colorError"
+                android:textColor="?attr/colorOnError"/>
             <Button
                 android:layout_gravity="end"
                 android:id="@+id/btn_send"
